# THz_sim_application

./: .gitignore  README.md  pyproject.toml
Test_data_for_fitter/A11008858_reflection/: reflection_setup_ref_after_with_AuMirror_A1100858_avg600_onDryAir10min_int55.csv  reflection_setup_ref_before_with_AuMirror_A1100858_avg600_onDryAir10min_int57.csv  reflection_setup_sample_A1100858_avg600_onDryAir10min_int27.csv
Test_data_for_fitter/A11008858_transmission/: REFERENCE.csv  SAMPLE.csv
Test_data_for_fitter/A11013460_reflection/: reflection_setup_ref_after_with_AuMirror_A11013460_avg600_onDryAir10min_int56.csv  reflection_setup_sample_A11013460_avg600_onDryAir10min_int30.csv
Test_data_for_fitter/A11013460_transmission/: REFERENCE.csv  SAMPLE1.csv  SAMPLE2.csv
docs/: generate_lecture_assets.py  generate_time_domain_fit_figures.py  lecture_assets_v2.py  measured_reference_drude_study_notes.tex  time_domain_fit_derivation.tex
docs/final_lecture/: README.md  (+1 more)
notebooks/: THzFit_User_Workflow.ipynb  THzSim_User_Workflow.ipynb  THzSim_User_Workflow2.ipynb  THz_User_Visual_Guide.ipynb
scripts/: run_measured_compat_study.py
tests/: test_deepdive_fit.py  test_fit_model.py  test_fit_workflow.py  test_grids_fft.py  test_lecture_assets.py  test_measured_reference_compat.py  test_nk_csv.py  test_notebook_helpers.py  test_oblique_transfer.py  test_pulses.py  test_reference_workflow.py  test_sample_materials.py  test_sample_workflow.py  test_stack_validation.py  test_study_workflow.py  test_trace_csv.py  test_validation_workflow.py
thzsim2/: __init__.py  notebook_api.py
(+18957 files in other folders)
