[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thzsim2"
version = "0.1.3"
description = "User-friendly THz-TDS simulator workflows and core utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["thzsim2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
